# loom

./: .gitignore  Cargo.toml
loom_runtime/: CMakeLists.txt  loom_common.h  loom_memory.c  loom_memory.h  loom_runtime.c  loom_runtime.h  loom_scheduler.c  loom_scheduler.h  main.c  utils.c  utils.h
loom_runtime/asm/: restore_context.asm  save_context.asm
resources/: example.rs  structexprfntest.lr
resources/expressions/: arithmetic_operations.lr  literals.lr
resources/simple/: fn_no_args_no_return_empty.lr  fn_no_args_simple_return_empty.lr  fn_pointer_args_pointer_return_simple_body.lr  fn_simple_args_call_outer_simple_return.lr  fn_simple_args_simple_return_empty.lr  fn_simple_args_simple_return_simple_body.lr  impl_consts_and_statics_methods_and_functions.lr  impl_empty.lr  impl_methods_and_functions.lr  impl_simple.lr  struct_compound_fields.lr  struct_no_fields.lr  struct_pointer_fields.lr  struct_simple_fields.lr
src/: main.rs
src/compiler/: c_transpiler.rs
src/parser/: errors.rs  mod.rs  parser.rs  test_parser.rs
src/parser/semantics/: flatten_tree.rs  flow_control.rs  mod.rs  name_resolving.rs  name_scoping.rs  scope_resolving.rs  traits.rs
src/syntax/: ast.rs  lexer.rs  mod.rs  tokens.rs  traits.rs
src/typing/: literal_typing.rs  mod.rs  type_validation.rs
src/utils/: asserts.rs  literals.rs  mod.rs  test_utils.rs
